# bnireferal_scraper

./: input.xlsx  main.py  output.xlsx  pyproject.toml
